# mini_blockchain

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-139b46c649c7dc7baf028663f0f381f56417ee7a72897c856ff5b43927179c40.json  query-30f49bf3ee972207f1245f780b7cdeb5582574465a7f864b71d026cac3c143ff.json  query-36b0f954a185de1b76ea26d6996c2df179a22b15b462bd6d42aded53d08f2c43.json  query-3a8bc5ea459a2a6df85b89f3914884a9f609e47bf8aa95ab409bac9996ad242c.json  query-4da04b9d50c69ce1b4fb659abfddce6151198bbc6712e53643be6842d7ee473a.json  query-992e7d165c0794a0d1b616d4df91d163ba0cb53f36819a3a1153077a88f81fd3.json  query-a948c7649253bfbb75d2d9bccddd3961d05d5e5f76fd30c31a005f744020bbe4.json  query-d4cbc9e5b8167209dcb1497505427d91e65c77bcd7c5b0e342096052ee07ab9d.json
migrations/: 20250423100106_initial_schema.down.sql  20250423100106_initial_schema.up.sql  20250423140512_add_public_key_to_wallets.down.sql  20250423140512_add_public_key_to_wallets.up.sql  20250425024846_initial_schema.down.sql  20250425024846_initial_schema.up.sql
src/: block.rs  blockchain.rs  database.rs  main.rs  transaction.rs
src/db/: database.rs  mod.rs
src/db/models/: block.rs  jwt.rs  mod.rs  transaction.rs  user.rs  (+1 more)
src/middlewares/: auth.rs
src/models/: auth.rs  jwt.rs  mod.rs  response_basic.rs  transaction.rs  user.rs  wallet.rs
src/routes/: auth.rs  auth_routes.rs  balance.rs  mine.rs  mod.rs  transaction.rs  transaction_routes.rs  user_routes.rs  wallet_routes.rs
src/services/: auth.rs  auth_service.rs  mod.rs  transaction_service.rs  user_service.rs  wallet_service.rs
src/utils/: jwt.rs
(+5 files in other folders)
