[package]
name = "mini_blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
# hash
sha2 = "0.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# web
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }

# database
sqlx = { version = "0.8.5", features = [
    "mysql",
    "runtime-tokio-rustls",
    "chrono",
    "runtime-tokio-native-tls",
] }
dotenvy = "0.15"

# token
jsonwebtoken = "9.3.1"
