[package]
name = "mini_blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }

# hash
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"

bigdecimal = { version = "0.4.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# web
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }

# database
sqlx = { version = "0.8.5", features = [
    "mysql",
    "runtime-tokio-rustls",
    "chrono",
    "runtime-tokio-native-tls",
    "bigdecimal",
] }
dotenvy = "0.15"

# token
jsonwebtoken = "9.3.1"

# key
secp256k1 = { version = "0.31" }
k256 = { version = "0.13", features = ["ecdsa"] }
rand = { version = "0.9.1" }

# log
tracing = "0.1"
tracing-subscriber = "0.3.19"
